Updated with new screenshots, tweaked play button for visibility, tweaked background opacity during playback and fixed for IE compatibility (Flash needs the js to be loaded in the shadowbox)

--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -160,26 +160,6 @@ body.blog, body.blog-post, body.single-column {
     top: 0;
 }
 
-.content-upper #screencast {
-    position: absolute;
-    right: -50px;
-    top: 0;
-}
-
-.content-upper #screencast-portrait {
-    position: absolute;
-    right: 60px;
-    top: 0;
-}
-
-
-
-.content-upper #screencast-speakapedia {
-    position: absolute;
-    right: 15px;
-    top: -20px;
-}
-
 
 
 
@@ -204,7 +184,7 @@ body.blog, body.blog-post, body.single-column {
 }
 
 .content-upper .screencast-portrait .play-icon {
-    background: url(../backgrounds/play.png) 50% 50% no-repeat;
+    background: url(../backgrounds/play-icon.png) 50% 50% no-repeat;
     cursor: pointer;
     display: inline;
     float: left;
@@ -250,7 +230,7 @@ body.blog, body.blog-post, body.single-column {
 }
 
 .content-upper .screencast-landscape .play-icon {
-    background: url(../backgrounds/play.png) 50% 50% no-repeat;
+    background: url(../backgrounds/play-icon.png) 50% 50% no-repeat;
     cursor: pointer;
     display: inline;
     float: left;
@@ -279,44 +259,91 @@ body.blog, body.blog-post, body.single-column {
     display: inline;
     float: right;
     position: absolute;
-    right: 50px;
-    top: 30px;
+    right: 15px;
+    top: -12px;
 }
 
 .content-upper .screencast-ipad {
+  background: url(../images/ipad-frame.png) top left no-repeat;
   display: inline;
   float: left;
-  height: 263px;
-  padding: 0;
-  width: 350px;
+  height: 400px;
+  width: 450px;
   
 }
 
 .content-upper .screencast-ipad .play-icon {
-    background: url(../backgrounds/play.png) 50% 50% no-repeat;
+    background: url(../backgrounds/play-icon.png) 50% 50% no-repeat;
     cursor: pointer;
     display: inline;
     float: left;
-    height: 263px;
+    height: 274px;
     outline: none;
     text-indent: -9999px;
-    width: 350px;
+    width: 365px;
 }
 
 .content-upper .screencast-ipad .screen {
     display: inline;
     float: left;
-    height: 263px;
-    width: 350px;
+    margin: 40px 0 0 44px;
+    height: 274px;
+    width: 365px;
 }
 
 .content-upper .screencast-ipad .explore-flickr {
-    background: url(../backgrounds/explore-flickr.png) top left no-repeat;
+    background: url(../backgrounds/explore-flickr.jpg) top left no-repeat;
 }
 
-.content-upper .screencast-ipad .speakapedia {
-    background: #000 url(../backgrounds/speakapedia.png) top left no-repeat;
+
+.content-upper .play-icon:hover {
+    background: url(../backgrounds/play-icon-hover.png) 50% 50% no-repeat;
 }
+
+
+
+
+
+
+.content-upper .screencast-mac-container {
+    display: inline;
+    float: right;
+    position: absolute;
+    right: 0px;
+    top: 15px;
+}
+
+.content-upper .screencast-mac {
+  display: inline;
+  float: left;
+  height: 329px;
+  padding: 0;
+  width: 450px;
+  
+}
+
+.content-upper .screencast-mac .play-icon {
+    background: url(../backgrounds/play-icon.png) 50% 50% no-repeat;
+    cursor: pointer;
+    display: inline;
+    float: left;
+    height: 329px;
+    outline: none;
+    text-indent: -9999px;
+    width: 450px;
+}
+
+.content-upper .screencast-mac .screen {
+    display: inline;
+    float: left;
+    height: 329px;
+    width: 450px;
+}
+
+.content-upper .screencast-mac .speakapedia {
+    background: url(../images/speakapedia.png) top left no-repeat;
+}
+
 
 
 
